[package]
name = "jiang_mini_grep"
version = "0.1.1"
edition = "2021"
description = "minigrep 查询文件的某个字符"
license = "MIT"
documentation = "https://www.github.com/JiangHaoCode/minigrep"
homepage = "https://www.github.com/JiangHaoCode/minigrep"
repository = "https://www.github.com/JiangHaoCode/minigrep"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
